[package]
name    = "rgeometry-wasm"
version = "0.1.0"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgeometry    = { git = "https://github.com/rgeometry/rgeometry", branch = "main", version = "*" }
num          = "*"
gloo-render  = { git = "https://github.com/rustwasm/gloo" }
gloo-events  = "*"
wasm-bindgen = "0.2.63"
rand         = "0.8"
getrandom    = { version = "0.2.2", features = ["js"] }

[dependencies.web-sys]
version  = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'DomMatrix',
  'DomPointInit',
  'DomPoint',
  'Path2d',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Window',
]
