[package]
name    = "rgeometry-wasm"
version = "0.1.0"
authors = ["David Himmelstrup <lemmih@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgeometry    = { git = "https://github.com/rgeometry/rgeometry", branch = "main", version = "*" }
num          = "0.4.0"
gloo-render  = { git = "https://github.com/rustwasm/gloo" }
gloo-events  = "0.1.1"
wasm-bindgen = "0.2.74"
rand         = "0.8"
getrandom    = { version = "0.2.2", features = ["js"] }
once_cell    = "1.8.0"
js-sys       = "0.3.51"

[dependencies.web-sys]
version  = "0.3.51"
features = [
  'CanvasRenderingContext2d',
  'TextMetrics',
  'console',
  'Document',
  'DomMatrix',
  'DomPointInit',
  'DomPoint',
  'Path2d',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Touch',
  'TouchEvent',
  'TouchList',
  'Window',
  'CssStyleDeclaration',
]
